Added Googlefonts links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,400&display=swap" rel="stylesheet">
     <title>Quick tip!</title>
 </head>
 <body>
@@ -17,10 +20,10 @@
             </div>
             <div>
                 <div class="space-between">
-                    <label for="">Porcentaje de propina</label>
+                    <label for="inputPropina">Porcentaje de propina</label>
                     <span id="porcentajePropina"></span>
                 </div>
-                <input type="range" value="0" id="inputPropina">
+                <input type="range" value="0" id="inputPropina" class="range">
             </div>
             <div class="space-between">
                 <span>Propina</span>
@@ -35,10 +38,10 @@
         <section>
             <div>
                 <div class="space-between">
-                    <label for="divisionInput">Cuantos somos?</label>
+                    <label for="divisionInput">¿Cuántos somos?</label>
                     <span id="cantidadPersonas">1 persona</span>
                 </div>
-                <input type="range" min="1" max="10" value="1" id="divisionInput">
+                <input type="range" min="1" max="10" value="1" id="divisionInput" class="range">
             </div>
             <div class="space-between">
                 <span>Tarifa cada uno</span>
