--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Quick tip!</title>
 </head>
 <body>
-    <main>
+    <main id="app">
         <h1>PropinApp</h1>
         <section>
             <div class="tarifa">
@@ -53,5 +53,6 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
