Changed 'Title' tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Quick tip!</title>
+    <title>PropinApp!</title>
 </head>
 <body>
     <main id="app">
@@ -39,7 +39,7 @@
             <div>
                 <div class="space-between">
                     <label for="divisionInput">¿Cuántos somos?</label>
-                    <span id="cantidadPersonas">1 persona</span>
+                    <span id="cantidadPersonas"></span>
                 </div>
                 <input type="range" min="1" max="10" value="1" id="divisionInput" class="range">
             </div>
